--- a/package.json
+++ b/package.json
@@ -20,6 +20,7 @@
     "cors": "^2.8.5",
     "electron-store": "^8.1.0",
     "express": "^4.18.2",
+    "jsonwebtoken": "^9.0.2",
     "nodemailer": "^6.9.7",
     "randomstring": "^1.3.0",
     "uuid": "^9.0.1",
@@ -65,7 +66,9 @@
       {
         "from": "assets",
         "to": "assets",
-        "filter": ["**/*"]
+        "filter": [
+          "**/*"
+        ]
       }
     ]
   }
