--- a/server/package.json
+++ b/server/package.json
@@ -8,6 +8,7 @@
     "dev": "nodemon index.js"
   },
   "dependencies": {
+    "async-mutex": "^0.5.0",
     "bull": "^4.12.2",
     "chalk": "^5.3.0",
     "cors": "^2.8.5",
@@ -16,7 +17,8 @@
     "nodemailer": "^6.9.9",
     "randomstring": "^1.3.0",
     "uuid": "^9.0.1",
-    "winston": "^3.11.0"
+    "winston": "^3.11.0",
+    "winston-daily-rotate-file": "^5.0.0"
   },
   "devDependencies": {
     "electron": "^35.0.3",
